# escooters-demand-mlops

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main_flow-deployment.yaml  prefect.yaml  pyproject.toml
.docker/: Dockerfile-api  Dockerfile-train
models/: best_params.json  model.txt
references/: community_codes_dict.pkl
src/api/: predict.py
src/data/: load_data.py  scrape_data.py  split.py
src/features/: build_features.py
src/models/: hpo.py  predict_model.py  train_model.py
src/monitoring/: docker-compose.yml  monitoring.py
src/monitoring/dashboards/: grafana_dashboards.json
src/pipeline/: train_pipeline.py
tests/: test_load_data.py
