[tool.poetry]
name = "escooters-demand-mlops"
version = "0.1.0"
description = ""
authors = ["Sergey Parshukov <syparshukov@gmail.com>"]
readme = "README.md"
#packages = [{include = "escooters_demand_mlops"}]

[tool.poetry.dependencies]
python = "3.10.9"
pandas = "^2.0.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
shapely = "^2.0.1"
fastparquet = "^2023.4.0"
pyarrow = "^12.0.1"
lightgbm = "^3.3.5"
mlflow = "^2.4.1"
boto3 = "^1.28.9"


[tool.poetry.group.train.dependencies]
hyperopt = "^0.2.7"
prefect = "^2.10.21"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
prefect-aws = "^0.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pre-commit = "^3.3.3"

[tool.poetry.group.api.dependencies]
flask = "^2.3.2"
gunicorn = "20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pylint.format]
min-similarity-lines = 10
fail-under = 9.7
py-version = 3.10
good-names=[
    'df', 'X_train', 'X_test'
]
max-line-length = 120
disable = [
    'locally-disabled', 'suppressed-message',
    'missing-module-docstring', 'missing-class-docstring',
    'missing-function-docstring', 'too-few-public-methods',
    'wrong-import-position', 'import-outside-toplevel',
    'fixme', 'too-many-locals', 'too-many-arguments',
    'too-many-instance-attributes', 'c-extension-no-member'
]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
